--- a/windows.ltsc2019/Dockerfile
+++ b/windows.ltsc2019/Dockerfile
@@ -3,6 +3,8 @@
 FROM mcr.microsoft.com/windows/servercore:ltsc2019
 SHELL ["powershell", "-Command"]
 
+ARG AWS_CLI_Version=2.0.47
+
 # Install Choco
 RUN $ProgressPreference = 'SilentlyContinue'; `
     Set-ExecutionPolicy Bypass -Scope Process -Force; `
@@ -23,15 +25,18 @@ RUN Invoke-WebRequest -Uri https://aka.ms/installazurecliwindows -OutFile .\Azur
     Start-Process msiexec.exe -Wait -ArgumentList '/I AzureCLI.msi /quiet'; `
     rm .\AzureCLI.msi
 
-# # Install AWS CLI
-# # https://docs.aws.amazon.com/powershell/latest/userguide/pstools-getting-set-up-windows.html#ps-installing-awspowershellnetcore
+# AWS CLI
+RUN choco install awscli -y --version ${AWS_CLI_Version} --no-progress 
+
+# Install AWS PowerShell
+# https://docs.aws.amazon.com/powershell/latest/userguide/pstools-getting-set-up-windows.html#ps-installing-awspowershellnetcore
 RUN Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force; `
     Install-Module -name AWSPowerShell.NetCore -RequiredVersion 4.0.6 -Force
 
-# # Install NodeJS
+# Install NodeJS
 RUN choco install nodejs-lts -y --version 12.18.3 --no-progress
 
-# # Install kubectl
+# Install kubectl
 RUN Invoke-WebRequest "https://storage.googleapis.com/kubernetes-release/release/v1.18.8/bin/windows/amd64/kubectl.exe" -OutFile .\kubectl.exe; `
     mv .\kubectl.exe C:\Windows\system32\;
 
@@ -55,21 +60,21 @@ RUN Invoke-WebRequest "https://dl.google.com/dl/cloudsdk/channels/rapid/download
     .\google-cloud-sdk\install.bat --quiet; `
     rm .\google-cloud-sdk-305.0.0-windows-x86_64.zip
 
-# # Install ScriptCS
+# Install ScriptCS
 RUN choco install scriptcs -y --version 0.17.1 --no-progress
 
-# # Install octo
+# Install octo
 RUN choco install octopustools -y --version 7.4.1 --no-progress
 
-# # Install Octopus Client
+# Install Octopus Client
 RUN Install-Package Octopus.Client -source https://www.nuget.org/api/v2 -SkipDependencies -Force -RequiredVersion 8.8.3
 
-# # Install eksctl
+# Install eksctl
 RUN choco install eksctl -y --version 0.25.0 --no-progress
 
-# # Install Powershell Core
+# Install Powershell Core
 RUN choco install powershell-core --yes --version 7.0.3 --no-progress
 
-# # Update path for new tools
+# Update path for new tools
 ADD .\scripts\update_path.cmd C:\update_path.cmd
 RUN .\update_path.cmd;
